--- a/style.css
+++ b/style.css
@@ -1,38 +1,68 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: 16px;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
 }
 
-.navbar{
+.navbar {
     background-color: rgb(102, 113, 212);
-    height: 30px;
+    height: 50px;
     text-align: center;
-    padding: 10 0px;
+    padding: 10px 0;
 }
 
-.navbar a{
-    margin-top: 1px;
-    margin-left: 40px;
-    /* background-color:rgb(206, 180, 180); */
+.navbar a {
+    margin: 0 20px;
     text-decoration: none;
     color: rgb(255, 255, 255);
-    
 }
 
-.about{
+.about {
     background-color: aqua;
+    padding: 20px;
 }
 
-.profile{
-    margin-top: auto;
+.profile {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 46%, rgba(0,212,255,1) 100%);
+    padding: 20px;
+    color: white;
+    text-align: center;
+}
+
+.skill-bg {
+    background-color: black;
+    padding: 20px;
+}
+
+.skill {
+    background-color: aqua;
+    padding: 20px;
+    text-align: center;
+    color: black;
+}
+
+/* Additional styles for text and headings */
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.about-new{
+    height: 500px;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 46%, rgba(0,212,255,1) 100%);
 }
 
-.skill-bg{
-    background-color:black;
-}
-
-.skill{
-    background-color: aqua;
+.about-new div{
+    padding-top: 200px;
+    padding-left: 350px;
+    padding-right: 350px;
 }
